fix: timeline img alignment fix

--- a/src/features/components/molecules/timeline-item/style.module.scss
+++ b/src/features/components/molecules/timeline-item/style.module.scss
@@ -1,3 +1,4 @@
+@use 'features/styles/theme/theme-mixins' as *;
 @import 'features/styles/theme/variables';
 
 .timeline_item {
@@ -9,6 +10,11 @@
         inset-inline-start: 10px;
         border-inline-start: 2px dashed $color-brand;
         z-index: -1;
+    }
+    img {
+        @include breakpoints(laptop) {
+            margin-top: 0.6rem;
+        }
     }
 }
 .last_item {
